[package]
name = "ec4rs"
description = "EditorConfig For Rust"
authors = ["TheDaemoness"]
categories = ["config", "parser-implementations"]
homepage = "https://github.com/TheDaemoness/ec4rs"
keywords = ["editorconfig"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/TheDaemoness/ec4rs"

edition = "2021"
include = ["/src", "/README.md", "/rustdoc.md"]
rust-version = "1.79.0" # std::path::absolute
version = "1.2.0"

[workspace]
members = ["glob", "tools"]

[features]
default = ["ec4rs_glob"]
bcp_47 = ["dep:unic-locale"]
ec4rs_glob = ["dep:ec4rs_glob"]
globset = ["dep:globset"]
track-source = []

[dependencies]
ec4rs_glob = { version = "0.1.0", path = "glob", optional = true }
globset = { version = "0.4.16", optional = true, default-features = false }
unic-locale = { version = "0.9.6", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_unstable"]
