[package]
name = "ec4rs_tools"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ec4rs = { path = ".." }
const_format = "0.2.22"
clap = { version = "3.1", features = ["derive"] }

[[bin]]
name = "ec4rs-parse"
